# emektup

./: .gitignore  firestore.rules
.github/workflows/: deploy-prod.yml  deploy-staging.yml
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  fetch_logs.py  mock_webhook.py  pyproject.toml  test_intent.py  test_intent_loop.py
backend/app/: main.py
backend/app/api/: deps.py  deps_ops.py  schemas.py  schemas_ops.py
backend/app/api/routes/: admin.py  health.py  ops.py  orders.py  payments.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py  state_machine.py  utils.py
backend/app/db/: collections.py  firestore.py
backend/app/services/: payment_service.py
backend/emektup_backend.egg-info/: SOURCES.txt  requires.txt
backend/tests/: test_admin.py  test_firestore.py  test_health.py  test_ops.py  test_orders.py  test_payments.py  test_security.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: Checkout.tsx  Composer.tsx  Home.tsx  PaymentReturn.tsx  Tracker.tsx
rules-tests/: package-lock.json  package.json  security.test.js
