[project]
name = "emektup-backend"
version = "0.1.0"
description = "Emektup FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "firebase-admin>=6.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "slowapi>=0.1.9",
    "iyzipay>=1.0.46",
    "gunicorn>=23.0.0",
    "google-auth>=2.28.0",
    "google-cloud-tasks>=2.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "mock-firestore>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
